<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>HelloWorldModule</artifactId>
  <version>1</version>
  <packaging>jlink</packaging>
  <name>HelloWorldModule</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.9.2</junit.version>
    <javafx.version>24</javafx.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
      <classifier>win</classifier> <!--only platform specific jars-->
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
      <classifier>win</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>24</version>
      <classifier>win</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>${javafx.version}</version>
      <classifier>win</classifier>
    </dependency>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.1.2</version>
    </dependency><dependency>
    <groupId>com.dlsc.formsfx</groupId>
    <artifactId>formsfx-core</artifactId>
    <version>11.6.0</version>
    <exclusions>
      <exclusion>
        <groupId>org.openjfx</groupId>
        <artifactId>*</artifactId>
      </exclusion>
    </exclusions>
  </dependency>
    <dependency>
    <groupId>com.github.almasb</groupId>
    <artifactId>fxgl</artifactId>
    <version>11.17</version>
    <exclusions>
      <exclusion>
        <groupId>org.openjfx</groupId>
        <artifactId>*</artifactId>
      </exclusion>
    </exclusions>
  </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.0</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>24.0.0</version><!-- because jlink doesnt like annotations? like imported by fasterxml. -->
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <id>anatomyExplorer</id>
            <goals>
              <goal>run</goal>
              <goal>jlink</goal>
            </goals>
            <configuration>
             <options>
               <option>-Xmx4g</option>
             </options>
              <mainClass>Project.AnatomyExplorer</mainClass>
              <launcher>anatomyExplorer</launcher>
              <stripDebug>true</stripDebug>
              <compress>2</compress>
              <noHeaderFiles>true</noHeaderFiles>
              <noManPages>true</noManPages>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-jlink-plugin</artifactId>
        <version>3.2.0</version>
        <extensions>true</extensions>
        <configuration>
          <goal>jlink:jlink</goal>
        </configuration>
      </plugin>
      <!-- Use exec plugin to call jpackage -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>jpackage</id>
            <phase>package</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>${java.home}/bin/jpackage</executable>
              <arguments>
                <!-- Input is the jlink image -->
                <argument>--input</argument>
                <argument>${project.build.directory}/image</argument>

                <!-- Where to put the exe -->
                <argument>--dest</argument>
                <argument>${project.build.directory}</argument>

                <!-- Main class & module -->
                <argument>--main-class</argument>
                <argument>Project.Main</argument>
                <argument>--main-jar</argument>
                <argument>HelloWorldModule.jar</argument>

                <!-- Application name -->
                <argument>--name</argument>
                <argument>AnatomyExplorer</argument>

                <!-- Type: exe (instead of msi installer) -->
                <argument>--type</argument>
                <argument>exe</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>